--- a/Production/Src/SadGui/MainWindow.xaml
+++ b/Production/Src/SadGui/MainWindow.xaml
@@ -1,93 +1,34 @@
-﻿<Window x:Class="SadGui.MainWindow"
+﻿<Window x:Class="SadCLGUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Team Dart - SAD_GUI" Height="365" Width="525"
-        MinHeight="365" MinWidth="525">
-
-    <Grid Margin="0,0,0,40">
+        Title="MainWindow" Height="350" Width="525">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="18"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="200"></ColumnDefinition>
+            <ColumnDefinition Width="50*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid
-            Grid.Column="0"
-            Grid.Row="2">
+        <Grid Grid.Column="0" Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="33.3*"></RowDefinition>
+                <RowDefinition Height="33.3*"></RowDefinition>
+                <RowDefinition Height="33.3*"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="33.3*"></ColumnDefinition>
+                <ColumnDefinition Width="33.3*"></ColumnDefinition>
+                <ColumnDefinition Width="33.3*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button
-            Grid.Column="1"
-            Grid.Row="2"
-            Margin="5"
-            Command="{Binding moveDownCommand}"
-            >Down</Button>
-
-            <Button
-            Grid.Column="1"
-            Grid.Row="0"
-            Margin="5"
-            Command="{Binding moveUpCommand}"
-            >Up</Button>
-
-            <Button
-            Grid.Column="0"
-            Grid.Row="1"
-            Margin="5"
-            Command="{Binding moveLeftCommand}"
-            >Left</Button>
-
-            <Button
-            Grid.Column="2"
-            Grid.Row="1"
-            Margin="5"
-            Command="{Binding moveRightCommand}"
-            >Right</Button>
-
-            <Button
-            Grid.Column="1"
-            Grid.Row="1"
-            Margin="5"
-            Command="{Binding FireCommand}"
-            >FIRE!</Button>
+            <Button Grid.Column="0" Grid.Row="1" Margin="5">Left</Button>
+            <Button Grid.Column="1" Grid.Row="1" Margin="5" Command="{Binding Path=FireCommand}">Fire</Button>
+            <Button Grid.Column="2" Grid.Row="1" Margin="5">Right</Button>
+            <Button Grid.Column="1" Grid.Row="2" Margin="5">Down</Button>
+            <Button Grid.Column="1" Grid.Row="0" Margin="5">Up</Button>
         </Grid>
-
-
-        <Button 
-            Content="Exit" 
-            HorizontalAlignment="Right" 
-            Height="24" 
-            Margin="0,0,6,-34" 
-            Grid.Row="3" 
-            Grid.Column="3" 
-            VerticalAlignment="Bottom" 
-            Width="55"
-            Command="{Binding exitCommand}"/>
-        
-        <Menu 
-            Grid.Row="0"
-            Grid.ColumnSpan="2"
-            >
-            <MenuItem Header="File"/>
-            <MenuItem Header="Target">
-                <MenuItem Header="Load from File"/>
-                <MenuItem Header="Load from Server" Opacity="0.5" IsEnabled="False"/>
-                <Separator/>
-                <MenuItem Header="Clear Targets"/>
-            </MenuItem>
-            <MenuItem Header="Launcher"/>
-        </Menu>
-
+        <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="140" Margin="10,10,0,0" VerticalAlignment="Top" Width="297"/>
     </Grid>
+
 </Window>
