Midway into Incorporating TargetManager
Uploaded this so that it can be viewed immediately; didn't bother
touching things up and tying lose ends -this comes as is.

The target file is hard coded into the implementation for testing
purposes for the Target Display.

--- a/Production/Src/SadGui/GUI Views/LauncherControls.xaml
+++ b/Production/Src/SadGui/GUI Views/LauncherControls.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SadCLGUI.GUI_Windows.LauncherControls"
+﻿<UserControl x:Class="SadCLGUI.GUI_Views.LauncherControls"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -57,6 +57,14 @@
             Command="{Binding Path=DownCommand}"
             >
             Down
+        </Button>
+        <Button
+            Grid.Row="2"
+            Grid.Column="0"
+            Margin="5"
+            Command="{Binding Path=KillCommand}"
+            >
+            Kill
         </Button>
     </Grid>
 </UserControl>
