--- a/Production/Src/SadGui/GUI Views/MainWindow.xaml
+++ b/Production/Src/SadGui/GUI Views/MainWindow.xaml
@@ -1,21 +1,32 @@
 ﻿<Window x:Class="SadCLGUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:LauncherWindow="clr-namespace:SadCLGUI.GUI_Windows"
+        xmlns:myWindows="clr-namespace:SadCLGUI.GUI_Views"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50*"></RowDefinition>
-            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="5*"></RowDefinition>
+            <RowDefinition Height="45*"></RowDefinition>
+            <RowDefinition Height="40*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"></ColumnDefinition>
             <ColumnDefinition Width="50*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <LauncherWindow:LauncherControls
-            Grid.Row="1"
+        <myWindows:LauncherControls
+            Grid.Row="2"
             DataContext="{Binding MissileTurret}"
+            />
+        <myWindows:MenuBar
+            Grid.Row="0"
+            Grid.ColumnSpan="2"
+            />
+        
+        <myWindows:TargetBriefList
+            Grid.Row="1"
+            Grid.Column="2"
+            DataContext="{Binding BriefList}"
             />
     </Grid>
 
