--- a/Production/Src/SadGui/GUI Views/TargetBriefList.xaml
+++ b/Production/Src/SadGui/GUI Views/TargetBriefList.xaml
@@ -12,6 +12,11 @@
         </DataTemplate>
     </UserControl.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+
         <ListBox
             Grid.Column="1"
             Background="LightGray"
@@ -20,6 +25,20 @@
             ItemTemplate="{StaticResource ResourceKey=MyTargetTemplate}"
             ItemsSource="{Binding Targets}"
             />
+        <Grid
+            Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50*"/>
+                <ColumnDefinition Width="50*"/>
+            </Grid.ColumnDefinitions>
+            <Button
+                Grid.Column="0"
+                Content="Load Target File"
+                Margin="2"
+                Command="{Binding getTargetFileLocationCommand}"/>
+            
+        </Grid>
         
     </Grid>
+
 </UserControl>
